# dagster-taskiq-executor-demo

./: .dockerignore-default  .env.example  .gitignore  AGENTS.md  CLEANUP_REPORT.md  CLEANUP_REPORT_ADDENDUM.md  DEVELOPER_GUIDE.md  KNOWN_ISSUES.md  README.md  SIMPLE_TASKS_FIXES.md  TASKIQ_NATIVE_SIMPLIFICATION_PROPOSAL.md  TASKIQ_PLUGIN_LIMITATIONS.md  TESTING.md  TODO.md  docker-bake.hcl  docker-compose.yml  hk.pkl  mise.toml  pitchfork.toml  tasks.toml
.ai/plans/: stage-01-02-completion.md  stage-01.md  stage-02.md  stage-03.md  stage-04.md
.claude/skills/: README.md
app/: .dockerignore  .env.test  Dockerfile  TESTING.md  entrypoint.sh  mise.toml  pyproject.toml
app/config/: __init__.py  settings.py
app/scripts/: setup.sh
app/src/: __init__.py
app/src/auto_scaler/: __init__.py
app/src/dagster_jobs/: __init__.py
app/src/dagster_taskiq/: __init__.py  main.py
app/src/dagster_taskiq/auto_scaler/: __init__.py
app/src/dagster_taskiq/config/: __init__.py  dagster.py  database.py  settings.py
app/src/dagster_taskiq/dagster_jobs/: __init__.py  jobs.py  ops.py  repository.py  schedules.py
app/src/dagster_taskiq/load_simulator/: __init__.py
app/src/dagster_taskiq/taskiq_executor/: __init__.py  app.py  broker.py  models.py  task_payloads.py  worker.py
app/src/dagster_taskiq_demo/auto_scaler/: __init__.py  service.py
app/src/dagster_taskiq_demo/config/: database.py  exceptions.py  metrics.py  settings.py
app/src/dagster_taskiq_demo/dagster_jobs/: __init__.py  jobs.py  repository.py
app/src/dagster_taskiq_demo/load_simulator/: cli.py  simulator.py
app/src/dagster_taskiq_demo/taskiq_executor/: __init__.py  app.py  models.py  worker.py
app/src/load_simulator/: __init__.py
app/src/taskiq_executor/: __init__.py
app/tests/: conftest.py  test_auto_scaler.py  test_config.py  test_dagster_jobs.py  test_dagster_ops.py  test_load_simulator.py  test_repository.py  test_schedules.py  test_taskiq_executor.py
dagster-celery/: CELERY_CODEBASE_OVERVIEW.md  DOCUMENTATION_INDEX.md  EXPLORATION_SUMMARY.md  INTEGRATION_TESTING_REVIEW.md  MIGRATION_PLAN.md  MIGRATION_STATUS.md  QUICK_REFERENCE.md  README.md  README_MIGRATION.md  pyproject.toml  setup.py  verify_migration.py
dagster-celery-to-taskiq/: .dockerignore  IMPLEMENTATION_PROGRESS.md  INTEGRATION_TESTING_REVIEW.md  MIGRATION_STATUS.md  PARITY_REVIEW.md  README.md  mise.toml  pyproject.toml  verify_migration.py
dagster-celery-to-taskiq/example/: .dockerignore  Dockerfile  mise.toml  (+1 more)
dagster-taskiq/: .dockerignore  CANCELLATION.md  IMPLEMENTATION_PROGRESS.md  LOCALSTACK.md  NOTICE  PARITY_REVIEW.md  README.md  mise.toml  next-steps.md  pyproject.toml  pyrightconfig.json
dagster-taskiq-demo/: Dockerfile  README.md  dagster.yaml  entrypoint.sh  mise.toml  pyproject.toml
dagster-taskiq-demo/src/dagster_taskiq_demo/: main.py
dagster-taskiq-demo/src/dagster_taskiq_demo/auto_scaler/: __init__.py  service.py
dagster-taskiq-demo/src/dagster_taskiq_demo/config/: __init__.py  dagster.py  dagster.yaml  dagster.yaml.template  metrics.py
dagster-taskiq-demo/src/dagster_taskiq_demo/dagster_jobs/: jobs.py  repository.py
dagster-taskiq-demo/src/dagster_taskiq_demo/load_simulator/: __init__.py  cli.py  simulator.py  verification.py
dagster-taskiq-demo/src/dagster_taskiq_demo/taskiq_executor/: broker.py  task_payloads.py
dagster-taskiq-demo/tests/: __init__.py  conftest.py  test_config.py  test_load_simulator.py  test_repository.py
dagster-taskiq/example/: Dockerfile  README.md  docker-compose.yaml
dagster-taskiq/example/docker/: dagster.yaml  docker.env  init-queues.sh
dagster-taskiq/example/src/dagster_taskiq_example/: definitions.py
dagster-taskiq/src/dagster_taskiq/: __init__.py  app.py  broker.py  cancellable_broker.py  cancellable_receiver.py  cli.py  config.py  core_execution_loop.py  defaults.py  executor.py  launcher.py  make_app.py  models.py  simple_broker.py  simple_middleware.py  simple_tasks.py  tags.py  task_payloads.py  tasks.py  version.py  worker.py
dagster-taskiq/tests/: conftest.py  moto_patch.py  repo.py  repo_runner.py  test_cli.py  test_config.py  test_execute.py  test_launcher.py  test_priority.py  test_priority_unit.py  test_queues.py  test_utils.py  test_version.py  utils.py  utils_launcher.py  worker_entrypoint.py
deploy/: Dockerfile.pulumi  Makefile  Pulumi.dev.yaml  Pulumi.local.yaml  Pulumi.yaml  README.md  TESTING_IMPLEMENTATION.md  __main__.py  config.py  mise.toml  pyproject.toml  pytest.ini
deploy/components/: __init__.py  aurora_postgres.py  cloudwatch_logs.py  container_image.py  ecr_repository.py  ecs_cluster.py  ecs_helpers.py  iam.py  load_balancer.py  network.py  provider.py  rds_postgres.py  security.py  service_discovery.py  sqs_fifo.py  task_definitions.py
deploy/modules/: __init__.py  auto_scaler.py  dagster.py  taskiq.py  taskiq_demo.py
deploy/scripts/: ensure-images.sh  pytest_localstack_sync.py  sync-localstack-state.py
deploy/tests/: README.md  conftest.py  test_config.py  test_dagster.py  test_sqs_fifo.py  test_taskiq.py  test_taskiq_demo.py
deploy/tests/integration/: conftest.py  test_cross_resource_interactions.py  test_infrastructure_deployment.py  test_security_configurations.py
deploy/tests/policies/: infrastructure_security.rego  infrastructure_security_test.rego
scripts/: agent.zsh  build-and-push.sh  run-dashboard.sh  setup.sh
taskiq-aio-multi-sqs/: Makefile  README.md  mise.toml  pyproject.toml
taskiq-aio-multi-sqs/src/taskiq_aio_multi_sqs/: __init__.py  constants.py  exceptions.py  s3_backend.py  sqs_broker.py
taskiq-aio-multi-sqs/taskiq_aio_sqs/: __init__.py  sqs_broker.py
taskiq-aio-multi-sqs/tests/: conftest.py  smoke_test.py  test_backend.py  test_broker.py  test_kick.py  test_listen.py  test_simple_retry.py  test_smart_retry.py
taskiq-demo/: .env.example  Dockerfile  PLAN.md  README.md  entrypoint.sh  mise.toml  pyproject.toml
taskiq-demo/src/taskiq_demo/: __init__.py  __main__.py  config.py  logging.py  service.py  tasks.py  worker.py
taskiq-demo/tests/: __init__.py  test_service.py  test_tasks.py
(+70 files in other folders)
