[project]
name = "dagster-taskiq"
version = "0.0.0"
description = "Demo of Dagster with TaskIQ execution on LocalStack"
requires-python = ">=3.13,<3.14"
dependencies = [
    "dagster>=1.5.0",
    "dagster-webserver>=1.5.0",
    "dagster-postgres>=0.21.0",
    "taskiq>=0.11.0",
    "taskiq-aio-sqs>=0.4.0",
    "pydantic>=2.10.0,<=2.11.0", # base_dir is missing a type annotation
    "pydantic-settings>=2.0.0",
    "boto3>=1.34.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=1.4.0",
    "PyYAML>=6.0.0",
    "structlog>=25.5.0",
]

[build-system]
requires = ["uv_build>=0.9.6"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py313"
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN002",   # Missing type annotation for *args
    "ANN003",   # Missing type annotation for **kwargs
    "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed
    "BLE001",   # Do not catch blind exception: `Exception`
    "COM812",   # Trailing comma missing (conflicts with formatter)
    "CPY001",   # Missing copyright notice at top of file
    "D203",     # 1 blank line required before class docstring (conflicts with D211)
    "D213",     # Multi-line docstring summary should start at the second line (conflicts with D212)
    "DOC501",   # Raised exception missing from docstring
    "EM101",    # Exception must not use a string literal, assign to variable first
    "FIX001",   # Line contains FIXME
    "FIX002",   # Line contains TODO
    "FIX004",   # Line contains HACK
    "PLR0913",  # Too many arguments in function definition
    "TC001",    # Move application import into a type-checking block
    "TC002",    # Move third-party import into a type-checking block
    "TC003",    # Move standard library import into a type-checking block
    "TD001",    # Invalid TODO tag: `FIXME`
    "TD002",    # Missing author in TODO
    "TD003",    # Missing issue link on the line following this TODO
    "TRY003",   # Avoid specifying long messages outside the exception class
]
unfixable = ["ERA001"]  # Commented-out code

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "ANN001",   # Missing type annotation for function argument
    "ANN201",   # Missing return type annotation for public function
    "ANN202",   # Missing return type annotation for private function
    "D100",     # Missing docstring in public module
    "D101",     # Missing docstring in public class
    "D102",     # Missing docstring in public method
    "D103",     # Missing docstring in public function
    "D104",     # Missing docstring in public package
    "PLR2004",  # Magic value used in comparison
    "S101",     # Use of assert detected
    "S105",     # Possible hardcoded password
    "S106",     # Possible hardcoded password
    "S108",     # Probable insecure usage of temporary file or directory
    "SLF001",   # Private member accessed
    "ARG001",   # Unused function argument
    "ARG002",   # Unused method argument
]

[tool.ruff.lint.isort]
known-first-party = ["dagster_taskiq"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_reexport = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
enable_error_code = ["ignore-without-code", "possibly-undefined", "redundant-expr", "truthy-bool"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pyright]
pythonVersion = "3.13"
include = ["src", "tests"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
env = [
    "AWS_DEFAULT_REGION=us-east-1",
    "AWS_ENDPOINT_URL=http://localhost:4566",
    "AWS_ACCESS_KEY_ID=test",
    "AWS_SECRET_ACCESS_KEY=test",
    "POSTGRES_HOST=localhost",
    "POSTGRES_PORT=5432",
    "POSTGRES_USER=test",
    "POSTGRES_PASSWORD=test",
    "POSTGRES_DB=test",
    "TASKIQ_QUEUE_NAME=test-queue.fifo",
    "TASKIQ_DLQ_NAME=test-dlq.fifo",
    "ECS_CLUSTER_NAME=test-cluster",
    "DAGSTER_HOME=/tmp/dagster_test",
    "DAGSTER_WEBSERVER_HOST=localhost",
    "DAGSTER_WEBSERVER_PORT=3001",
    "TASKIQ_WORKER_CONCURRENCY=2",
    "TASKIQ_VISIBILITY_TIMEOUT=60",
    "AUTOSCALER_MIN_WORKERS=1",
    "AUTOSCALER_MAX_WORKERS=5",
    "AUTOSCALER_SCALE_UP_THRESHOLD=3",
    "AUTOSCALER_SCALE_DOWN_THRESHOLD=1",
    "AUTOSCALER_COOLDOWN_SECONDS=30",
    "LOAD_SIM_JOB_INTERVAL_SECONDS=60",
    "LOAD_SIM_FAST_JOB_DURATION_BASE=5",
    "LOAD_SIM_FAST_JOB_DURATION_VARIANCE=2",
    "LOAD_SIM_SLOW_JOB_DURATION_BASE=30",
    "LOAD_SIM_SLOW_JOB_DURATION_VARIANCE=10",
    "LOG_LEVEL=DEBUG",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.24.0",
    "pytest-env>=1.1.5",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "types-pyyaml>=6.0.12.20250915",
]
uv-build = [
    "uv-build>=0.9.7",
]
