[build-system]
requires = ["uv_build>=0.9.6"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
  "pyright>=1.1.390",
  "mypy>=1.18.2",
  "pytest>=8.4.2",
  "types-pyyaml>=6.0.12.20250915",
  "pytest-postgresql>=7"
]

[project]
name = "dagster-taskiq-demo"
version = "0.0.0"
description = "Demo of Dagster with TaskIQ execution on LocalStack"
requires-python = ">=3.13,<3.14"
dependencies = [
  "dagster-taskiq",
  "dagster>=1.5.0",
  "dagster-webserver>=1.5.0",
  "dagster-postgres>=0.21.0",
  "dagster-graphql>=0.21.0",
  "taskiq>=0.11.0",
  "taskiq-aio-sqs>=0.4.0",
  "pydantic>=2.10.0,<=2.11.0", # FYI: issues with dependencies
  "pydantic-settings>=2.0.0",
  "aioboto3>=13.0.0",
  "sqlalchemy>=2.0.0",
  "PyYAML>=6.0.0",
  "structlog>=25.5.0",
]

[tool.mypy]
python_version = "3.13"
files = ["src", "tests"]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_reexport = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
enable_error_code = ["ignore-without-code", "possibly-undefined", "redundant-expr", "truthy-bool"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pyright]
pythonVersion = "3.13"
include = ["src", "tests"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN002", # Missing type annotation for *args
  "ANN003", # Missing type annotation for **kwargs
  "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
  "BLE001", # Do not catch blind exception: `Exception`
  "COM812", # Trailing comma missing (conflicts with formatter)
  "CPY001", # Missing copyright notice at top of file
  "D203", # 1 blank line required before class docstring (conflicts with D211)
  "D213", # Multi-line docstring summary should start at the second line (conflicts with D212)
  "DOC501", # Raised exception missing from docstring
  "EM101", # Exception must not use a string literal, assign to variable first
  "FIX001", # Line contains FIXME
  "FIX002", # Line contains TODO
  "FIX004", # Line contains HACK
  "PLR0913", # Too many arguments in function definition
  "TC001", # Move application import into a type-checking block
  "TC002", # Move third-party import into a type-checking block
  "TC003", # Move standard library import into a type-checking block
  "TD001", # Invalid TODO tag: `FIXME`
  "TD002", # Missing author in TODO
  "TD003", # Missing issue link on the line following this TODO
  "TRY003" # Avoid specifying long messages outside the exception class
]
unfixable = ["ERA001"] # Commented-out code

[tool.ruff.lint.isort]
known-first-party = ["dagster_taskiq_demo"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
  "ANN001", # Missing type annotation for function argument
  "ANN201", # Missing return type annotation for public function
  "ANN202", # Missing return type annotation for private function
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D103", # Missing docstring in public function
  "D104", # Missing docstring in public package
  "PLR2004", # Magic value used in comparison
  "S101", # Use of assert detected
  "S105", # Possible hardcoded password
  "S106", # Possible hardcoded password
  "S108", # Probable insecure usage of temporary file or directory
  "SLF001", # Private member accessed
  "ARG001", # Unused function argument
  "ARG002" # Unused method argument
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.sources]
dagster-taskiq = {path = "../dagster-celery-to-taskiq", editable = true}
