[build-system]
requires = ["uv_build>=0.9.6"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
  "pyright>=1.1.390",
  "mypy>=1.18.2",
  "pytest>=8.4.2",
  "moto[s3,sqs,server]>=5.0.0",
  "taskiq-dashboard>=0.2.0",
  "docker>=7.1.0" # Find alternative
]

[project]
name = "dagster-taskiq"
version = "0.0.0" # FYI: on-changes, update __version__
description = "Package for using Taskiq as Dagster's execution engine."
requires-python = ">=3.11.11"
license = "Apache-2.0"
authors = [
  {name = "Kyle King", email = "dev.act.kyle@gmail.com"}
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent"
]
dependencies = [
  "aioboto3>=13.0.0",
  "dagster>=1.5.0",
  "taskiq>=0.11.0",
  "taskiq-aio-sqs>=0.4.0",
  "pydantic>=2.10.0,<=2.11.0", # FYI: issues with dependencies
  "pytest-timeout>=2.4.0"
]

[project.scripts]
dagster-taskiq = "dagster_taskiq.cli:main"

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_reexport = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = false
warn_unused_configs = true
warn_unused_ignores = true
enable_error_code = ["ignore-without-code", "possibly-undefined", "redundant-expr", "truthy-bool"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

[[tool.mypy.overrides]]
module = "dagster_taskiq.cancellable_broker"
disable_error_code = ["override"]

[[tool.mypy.overrides]]
module = "dagster_taskiq.cancellable_receiver"
disable_error_code = ["attr-defined"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src", "tests"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false

[[tool.pyright.overrides]]
include = ["tests/**/*.py"]
reportUnknownParameterType = false
reportMissingParameterType = false
reportUnknownReturnType = false
reportPrivateUsage = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportMissingImports = false
reportReturnType = false
reportArgumentType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 300

[tool.ruff]
line-length = 120
target-version = "py311"
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN002", # Missing type annotation for *args
  "ANN003", # Missing type annotation for **kwargs
  "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
  "BLE001", # Do not catch blind exception: `Exception`
  "COM812", # Trailing comma missing (conflicts with formatter)
  "CPY001", # Missing copyright notice at top of file
  "D203", # 1 blank line required before class docstring (conflicts with D211)
  "D213", # Multi-line docstring summary should start at the second line (conflicts with D212)
  "DOC501", # Raised exception missing from docstring
  "EM101", # Exception must not use a string literal, assign to variable first
  "FIX001", # Line contains FIXME
  "FIX002", # Line contains TODO
  "FIX004", # Line contains HACK
  "PLR0913", # Too many arguments in function definition
  "TC001", # Move application import into a type-checking block
  "TC002", # Move third-party import into a type-checking block
  "TC003", # Move standard library import into a type-checking block
  "TD001", # Invalid TODO tag: `FIXME`
  "TD002", # Missing author in TODO
  "TD003", # Missing issue link on the line following this TODO
  "TRY003" # Avoid specifying long messages outside the exception class
]
unfixable = ["ERA001"] # Commented-out code

[tool.ruff.lint.isort]
known-first-party = ["dagster_taskiq"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
  "ANN001", # Missing type annotation for function argument
  "ANN201", # Missing return type annotation for public function
  "ANN202", # Missing return type annotation for private function
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D103", # Missing docstring in public function
  "D104", # Missing docstring in public package
  "DOC201", # `return` is not documented in docstring
  "DOC402", # `yield` is not documented in docstring
  "RUF029", # Function is declared `async` but doesn't use async features
  "PLR2004", # Magic value used in comparison
  "S101", # Use of assert detected
  "S105", # Possible hardcoded password
  "S106", # Possible hardcoded password
  "S108", # Probable insecure usage of temporary file or directory
  "SLF001", # Private member accessed
  "ARG001", # Unused function argument
  "ARG002", # Unused method argument
  "PLC2701", # Private name import from external module (needed for Dagster test utils)
  "ERA001", # Commented-out code (often intentional in tests)
  "PLC0415", # Import at top level (intentional for lazy loading in conftest)
  "PGH003", # Use specific rule codes (often acceptable in tests)
  "PLR0915" # Too many statements (acceptable for complex test fixtures)
]

[tool.ruff.lint.pydocstyle]
convention = "google"
