[project]
name = "dagster-taskiq-localstack-infra"
version = "0.0.0"
description = "Pulumi infrastructure for Dagster TaskIQ LocalStack demo"
requires-python = ">=3.14"
dependencies = [
    "pulumi>=3.100.0",
    "pulumi-aws>=6.0.0",
    "pulumi-docker>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py314"
