[build-system]
requires = ["uv_build>=0.9.7"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "types_aiobotocore[essential]>=2.23.1",
  "ruff>=0.8.0",
  "pyright>=1.1.390",
  "mypy>=1.18.2"
]

[lint.per-file-ignores]
"tests/*" = [
  "S101", # Use of assert detected
  "S301", # Use of pickle detected
  "D103", # Missing docstring in public function
  "SLF001", # Private member accessed
  "S311", # Standard pseudo-random generators are not suitable for security/cryptographic purposes
  "D101", # Missing docstring in public class
  "PLR2004", # Magic value used in comparison
  "PLC0415", # Import should be placed at the top of the file
  "T201" # Print statement found
]

[project]
name = "taskiq-aio-multi-sqs"
version = "0.0.0"
description = "Multi-SQS/S3 Broker for TaskIQ using Aiobotocore"
requires-python = ">=3.11"
dependencies = [
  "annotated-types~=0.7.0",
  "pydantic>=2.0",
  "aiobotocore>=2.23.1",
  "taskiq[orjson]>=0.11.12"
]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_reexport = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
enable_error_code = ["ignore-without-code", "possibly-undefined", "redundant-expr", "truthy-bool"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pyright]
pythonVersion = "3.11"
include = ["src", "tests"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
  "ignore:The event_loop fixture provided by pytest-asyncio has been redefined:DeprecationWarning"
]

[tool.ruff]
target-version = "py311"
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN002", # Missing type annotation for *args
  "ANN003", # Missing type annotation for **kwargs
  "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
  "BLE001", # Do not catch blind exception: `Exception`
  "COM812", # Trailing comma missing (conflicts with formatter)
  "CPY001", # Missing copyright notice at top of file
  "D203", # 1 blank line required before class docstring (conflicts with D211)
  "D213", # Multi-line docstring summary should start at the second line (conflicts with D212)
  "DOC501", # Raised exception missing from docstring
  "EM101", # Exception must not use a string literal, assign to variable first
  "FIX001", # Line contains FIXME
  "FIX002", # Line contains TODO
  "FIX004", # Line contains HACK
  "PLR0913", # Too many arguments in function definition
  "TC001", # Move application import into a type-checking block
  "TC002", # Move third-party import into a type-checking block
  "TC003", # Move standard library import into a type-checking block
  "TD001", # Invalid TODO tag: `FIXME`
  "TD002", # Missing author in TODO
  "TD003", # Missing issue link on the line following this TODO
  "TRY003" # Avoid specifying long messages outside the exception class
]
unfixable = ["ERA001"] # Commented-out code

[tool.ruff.lint.isort]
known-first-party = ["taskiq_aio_multi_sqs"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
  "ANN001", # Missing type annotation for function argument
  "ANN201", # Missing return type annotation for public function
  "ANN202", # Missing return type annotation for private function
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D103", # Missing docstring in public function
  "D104", # Missing docstring in public package
  "PLR2004", # Magic value used in comparison
  "S101", # Use of assert detected
  "S105", # Possible hardcoded password
  "S106", # Possible hardcoded password
  "S108", # Probable insecure usage of temporary file or directory
  "SLF001", # Private member accessed
  "ARG001", # Unused function argument
  "ARG002" # Unused method argument
]

[tool.ruff.lint.pydocstyle]
convention = "google"
