[build-system]
requires = ["uv_build>=0.9.6"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "httpx>=0.27.2",
  "mypy>=1.8.0",
  "pyright>=1.1.390",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0"
]

[project]
name = "taskiq-demo"
version = "0.0.0"
description = "Minimal TaskIQ demo targeting LocalStack SQS"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "aioboto3>=13.0.0",
  "fastapi>=0.115.0",
  "pydantic-settings>=2.5.0",
  "structlog>=25.4.0",
  "taskiq>=0.11.0",
  "taskiq-aio-sqs>=0.4.0",
  "taskiq-fastapi>=0.3.5",
  "uvicorn[standard]>=0.32.0"
]

[project.scripts]
taskiq-demo-api = "taskiq_demo.__main__:run_api"
taskiq-demo-worker = "taskiq_demo.worker:main"

[tool.mypy]
python_version = "3.13"
files = ["src", "tests"]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_reexport = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
enable_error_code = ["ignore-without-code", "possibly-undefined", "redundant-expr", "truthy-bool"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pyright]
pythonVersion = "3.13"
include = ["src", "tests"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN002",
  "ANN003",
  "ANN401",
  "COM812",
  "D203",
  "D213",
  "S101",
  "TRY003"
]
unfixable = ["ERA001"]

[tool.ruff.lint.isort]
known-first-party = ["taskiq_demo"]
